<resources>
    <string name="app_name">My Albums</string>
    <string name="add">Add</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="title_activity_album">album_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_photo">Add Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="display">Display</string>
    <string name="move_photo">Move Photo</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="add_tag">Add Tag</string>
    <string name="prev">Prev</string>
</resources>